@@ -10,6 +10,7 @@ Phoronix Test Suite 6.4.0 (Git)
 - phoromatic: Initial server-side implementation of new stress-run support via Phoromatic Server when going to "Run A Benchmark" and opting for stress mode
 - phoromatic: Initial client-side implementation of new stress-run support
 - phoromatic: Add basic email notification support to the Phoromatic export results viewer
+- phoromatic: Say "Stress Testing - XXX" as Phoromatic status messages when in stress-run mode
 
 Phoronix Test Suite 6.2.2
 9 March 2016
